docs/envoy/v1.22.10/_sources/intro/arch_overview/security/external_dep_dataplane_core.rst.txt
.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `Abseil <https://abseil.io/>`__, `6f43f5b <https://github.com/abseil/abseil-cpp/tree/6f43f5bb398b6685575b36874e36cf1695734df1>`__, 2022-04-04, 
  `Boost <https://www.boost.org/>`__, `1.78.0 <https://boostorg.jfrog.io/artifactory/main/release/1.78.0/source/boost_1_78_0.tar.gz>`__, 2021-12-08, `cpe:2.3:a:boost:boost:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aboost%3Aboost%3A%2A&search_type=all>`__
  `BoringSSL <https://github.com/google/boringssl>`__, `cacb552 <https://github.com/google/boringssl/tree/cacb5526268191ab52e3a8b2d71f686115776646>`__, 2022-02-08, `cpe:2.3:a:google:boringssl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aboringssl%3A%2A&search_type=all>`__
  `BoringSSL (FIPS) <https://boringssl.googlesource.com/boringssl/+/master/crypto/fipsmodule/FIPS.md>`__, `fips-20190808 <https://commondatastorage.googleapis.com/chromium-boringssl-fips/boringssl-ae223d6138807a13006342edfeef32e813246b39.tar.xz>`__, 2019-08-08, `cpe:2.3:a:google:boringssl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aboringssl%3A%2A&search_type=all>`__
  `c-ares <https://c-ares.haxx.se/>`__, `1.18.1 <https://github.com/c-ares/c-ares/releases/tag/cares-1_18_1>`__, 2021-10-27, `cpe:2.3:a:c-ares_project:c-ares:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ac-ares_project%3Ac-ares%3A%2A&search_type=all>`__
  `fmt <https://fmt.dev>`__, `8.1.1 <https://github.com/fmtlib/fmt/releases/tag/8.1.1>`__, 2022-01-06, `cpe:2.3:a:fmt:fmt:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Afmt%3Afmt%3A%2A&search_type=all>`__
  `gperftools <https://github.com/gperftools/gperftools>`__, `2.9.1 <https://github.com/gperftools/gperftools/releases/tag/gperftools-2.9.1>`__, 2021-03-03, `cpe:2.3:a:gperftools_project:gperftools:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agperftools_project%3Agperftools%3A%2A&search_type=all>`__
  `gRPC <https://grpc.io>`__, `a3ae8e0 <https://github.com/grpc/grpc/tree/a3ae8e00a2c5553c806e83fae83e33f0198913f0>`__, 2021-06-07, `cpe:2.3:a:grpc:grpc:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agrpc%3Agrpc%3A%2A&search_type=all>`__
  `Hyperscan <https://hyperscan.io>`__, `5.4.0 <https://github.com/intel/hyperscan/releases/tag/v5.4.0>`__, 2021-01-13, 
  `libcircllhist <https://github.com/circonus-labs/libcircllhist>`__, `63a16dd <https://github.com/circonus-labs/libcircllhist/tree/63a16dd6f2fc7bc841bb17ff92be8318df60e2e1>`__, 2019-02-11, 
  `libevent <https://libevent.org>`__, `62c152d <https://github.com/libevent/libevent/tree/62c152d9a7cd264b993dad730c4163c6ede2e0a3>`__, 2020-07-28, `cpe:2.3:a:libevent_project:libevent:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Alibevent_project%3Alibevent%3A%2A&search_type=all>`__
  `liburing <https://github.com/axboe/liburing>`__, `2.1 <https://github.com/axboe/liburing/releases/tag/liburing-2.1>`__, 2021-09-09, 
  `Nghttp2 <https://nghttp2.org>`__, `1.46.0 <https://github.com/nghttp2/nghttp2/releases/tag/v1.46.0>`__, 2021-10-19, `cpe:2.3:a:nghttp2:nghttp2:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Anghttp2%3Anghttp2%3A%2A&search_type=all>`__
  `nlohmann JSON <https://nlohmann.github.io/json>`__, `3.10.5 <https://github.com/nlohmann/json/releases/tag/v3.10.5>`__, 2022-01-03, `cpe:2.3:a:json-for-modern-cpp_project:json-for-modern-cpp:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ajson-for-modern-cpp_project%3Ajson-for-modern-cpp%3A%2A&search_type=all>`__
  `Perfetto <https://perfetto.dev/>`__, `22.1 <https://github.com/google/perfetto/releases/tag/v22.1>`__, 2021-12-07, 
  `Protocol Buffers <https://developers.google.com/protocol-buffers>`__, `3.19.4 <https://github.com/protocolbuffers/protobuf/releases/tag/v3.19.4>`__, 2022-01-28, `cpe:2.3:a:google:protobuf:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aprotobuf%3A%2A&search_type=all>`__
  `QUICHE <https://github.com/google/quiche>`__, `8864d08 <https://github.com/google/quiche/tree/8864d08f60cf15467750d8843d864d66eafe0d5e>`__, 2022-04-11, 
  `Ragel <https://www.colm.net/open-source/ragel/>`__, `6.10 <https://www.colm.net/files/ragel/ragel-6.10.tar.gz>`__, 2017-03-24, 
  `RE2 <https://github.com/google/re2>`__, `2022-04-01 <https://github.com/google/re2/releases/tag/2022-04-01>`__, 2022-03-31, 
  `Rules for using foreign build systems in Bazel <https://github.com/bazelbuild/rules_foreign_cc>`__, `0.7.1 <https://github.com/bazelbuild/rules_foreign_cc/releases/tag/0.7.1>`__, 2022-01-03, 
  `spdlog <https://github.com/gabime/spdlog>`__, `1.9.2 <https://github.com/gabime/spdlog/releases/tag/v1.9.2>`__, 2021-08-12, 
  `tcmalloc <https://github.com/google/tcmalloc>`__, `a08f548 <https://github.com/google/tcmalloc/tree/a08f5483182f41ce626e3f66662966342bb448fa>`__, 2022-04-07, 
  `xxHash <https://github.com/Cyan4973/xxHash>`__, `0.8.1 <https://github.com/Cyan4973/xxHash/releases/tag/v0.8.1>`__, 2021-11-29, 
  `yaml-cpp <https://github.com/jbeder/yaml-cpp>`__, `db6deed <https://github.com/jbeder/yaml-cpp/tree/db6deedcd301754723065e0bbb1b75927c5b49c7>`__, 2021-07-23, `cpe:2.3:a:yaml-cpp_project:yaml-cpp:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ayaml-cpp_project%3Ayaml-cpp%3A%2A&search_type=all>`__
  `zlib <https://zlib.net>`__, `79baebe <https://github.com/madler/zlib/tree/79baebe50e4d6b73ae1f8b603f0ef41300110aa3>`__, 2019-04-14, `cpe:2.3:a:gnu:zlib:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agnu%3Azlib%3A%2A&search_type=all>`__
  `zlib-ng <https://github.com/zlib-ng/zlib-ng>`__, `2.0.6 <https://github.com/zlib-ng/zlib-ng/releases/tag/2.0.6>`__, 2021-12-24, 

